--- a/src/landing/templates/landing/index.html
+++ b/src/landing/templates/landing/index.html
@@ -1,19 +1,20 @@
 {% extends 'landing/base.html' %}
 {% block content %}
 
-
-
-<!-- About-->
-{% include 'landing/about.html' %}
-
 <!-- Services-->
 {% include 'landing/services.html' %}
 
 <!-- Portfolio-->
 {% include 'landing/portfolio.html' %}
 
-<!-- Call to action-->
-{% include 'landing/call-to-action.html' %}
+<!-- About-->
+{% include 'landing/about.html' %}
+
+<!-- Team-->
+{% include 'landing/team.html' %}
+
+<!-- Client-->
+{% include 'landing/clients.html' %}
 
 <!-- Contact-->
 {% include 'landing/contact.html' %}
