--- a/src/landing/templates/landing/nav.html
+++ b/src/landing/templates/landing/nav.html
@@ -11,6 +11,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                {% if debug %}
+                <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:8000/admin/">Admin</a></li>
+                {% endif %}
                 <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                 <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
